[package]
name = "brine"
version = "0.1.0"
edition = "2021"
authors = ["Pawan Dubey"]
description = "Implementation of the Lox interpreter from Crafting Interpreters, in Rust"

[dependencies]
structopt = "0.3.25"
camino = "1.0.5"
exitcode = "1.1.2"
rustyline = "9.1.2"
unicode-xid = "0.2.2"

[dev-dependencies]
test-case = "2.0.0-rc1"